#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT(hdet, 20110527, see README)
AC_CONFIG_SRCDIR([hdet.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.
#AC_CHECK_LIB([resolv], [res_query])

# Checks for header files.
AC_CHECK_HEADERS([netinet/in.h stdint.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_INT64_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

AC_SUBST(hdet_CFLAGS)

# Checks for library functions.
AC_FUNC_REALLOC
AC_CHECK_FUNCS([memset strcasecmp strchr strdup strncasecmp])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
