## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = make_remote_mapping

make_remote_mapping_SOURCES = \
	make-remote-mapping.cc

make_remote_mapping_CXXFLAGS = -pthread 

make_remote_mapping_LDFLAGS = 

make_remote_mapping_LDADD = 

